| JDK 23 |
|---|
| 23 b23Fixed |
Some tables, like the symbol table or c++ vtables, are currently marked for relocation in the read-write or read-only regions and patched at runtime. These tables don't have embedded pointers and can instead be relocated with offsets, thus reducing the amount of pointers in the relocation bitmap.
|