8329418: Replace pointers to tables with offsets in relocation bitmap