src/hotspot/share/cds/cppVtables.cpp
@@ -213,23 +213,35 @@ void CppVtableCloner<T>::init_orig_cpp_vtptr(int kind) {
 // the following holds true:
 //     _index[ConstantPool_Kind]->cloned_vtable()  == ((intptr_t**)cp)[0]
 //     _index[InstanceKlass_Kind]->cloned_vtable() == ((intptr_t**)ik)[0]
-CppVtableInfo** CppVtables::_index = nullptr;
+static CppVtableInfo* _index[_num_cloned_vtable_kinds];
+// Vtables are all fixed offsets from ArchiveBuilder::current()->rw_region()->base()
+// i.e ConstantPool is at offset 0x58. We can store these offsets and use the to
+// patch the pointers at runtime without storing them in the RW region
+static int _vtable_offsets[_num_cloned_vtable_kinds];
 
 char* CppVtables::dumptime_init(ArchiveBuilder* builder) {
   assert(CDSConfig::is_dumping_static_archive(), "cpp tables are only dumped into static archive");
-  size_t vtptrs_bytes = _num_cloned_vtable_kinds * sizeof(CppVtableInfo*);
-  _index = (CppVtableInfo**)builder->rw_region()->allocate(vtptrs_bytes);
 
   CPP_VTABLE_TYPES_DO(ALLOCATE_AND_INITIALIZE_VTABLE);
 
   size_t cpp_tables_size = builder->rw_region()->top() - builder->rw_region()->base();
   builder->alloc_stats()->record_cpp_vtables((int)cpp_tables_size);
 
+  for (int kind = 0; kind < _num_cloned_vtable_kinds; kind++) {
+    _vtable_offsets[kind] = (address)_index[kind] - (address)ArchiveBuilder::current()->rw_region()->base();
+    tty->print_cr("rw base: %p, ptr: %p, offset: %x", ArchiveBuilder::current()->rw_region()->base(), _index[kind],
+                                                      _vtable_offsets[kind]);
+  }
+
   return (char*)_index;
 }
 
 void CppVtables::serialize(SerializeClosure* soc) {
-  soc->do_ptr(&_index);
+  tty->print_cr("Serializing cpp vtables");
+  for (int i = 0; i < _num_cloned_vtable_kinds; i++) {
+    soc->do_ptr(&_index[i]);
+  }
+  tty->print_cr("Done serializing cpp vtables");
   if (soc->reading()) {
     CPP_VTABLE_TYPES_DO(INITIALIZE_VTABLE);
   }
